Fixed Responsive issue on small devices

--- a/components/card-character.module.css
+++ b/components/card-character.module.css
@@ -43,6 +43,7 @@
   .card {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+    margin: 0.5em;
   }
 
   .characterImg {
